--- a/public/404.html
+++ b/public/404.html
@@ -33,6 +33,8 @@
 <body>
     <h1>404 - Not Found</h1>
     <p>The page you are looking for might be in another castle.</p>
-    <p><a href="./openapi-playgound/">Go back to the home page</a></p>
+    <p><a href="./">Go back to the home page <code>./</code></a></p>
+    <p><a href="./openapi-playground">Go back to the home page <code>./openapi-playground</code></a></p>
+    <p><a href="/openapi-playground">Go back to the home page <code>/openapi-playground</code></a></p>
 </body>
 </html>
